--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -7,7 +7,7 @@
 
   <meta name="title" content="FAQ | gaus" />
   <meta http-equiv="content-language" content="en" />
-  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, DruPocket for Instagram Photo Video, apps available as free and commercial apps." />
+  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, VIP Downloader & Scraper for Instagram Photo Video, apps available as free and commercial apps." />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -223,7 +223,6 @@
       </footer>
     </div>
   </div>
-  <script id="config" type="application/json">{"BANNER": true, "BACK_HOME": false, "FEED": false, "PODCAST": false, "REWARD": false, "STACK": false, "SLIDE": true}</script>
 </body>
 
 </html>
