--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -7,7 +7,7 @@
 
   <meta name="title" content="FAQ | gaus" />
   <meta http-equiv="content-language" content="en" />
-  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, VIP Downloader for Instagram Photo Video, apps available as free and commercial apps." />
+  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, VIP Downloader & Scraper for Instagram Photo Video, apps available as free and commercial apps." />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -383,7 +383,6 @@
       </footer>
     </div>
   </div>
-  <script id="config" type="application/json">{"BANNER": true, "BACK_HOME": false, "NO_WM": true, "ONE_DL": true, "REWARD": true, "SCRAPER": true, "STACK": false, "SLIDE": false}</script>
 </body>
 
 </html>
