--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/faq" />
   <title>FAQ | gaus</title>
   <style>
-    html,body,.root{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary::-webkit-details-marker{display:none}details summary{width:100%;padding:.75rem 0;border-top:1px solid rgba(0,0,0,.4);position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary:after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary:after{transform:rotate(45deg)}details summary{outline:0}details>div,details>p,details>ul,details>ol{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
+    html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #999;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -58,7 +58,7 @@
                             At your SD (secondary or external) card:
                             <ul>
                               <li><b>Internal storage > Pictures|Movies > VIP Downloader</b></li>
-                              <li><b>SD card/Removable storage > VIP Downloader > Pictures|Movies</b>)</li>
+                              <li><b>SD card or Removable storage > VIP Downloader > Pictures|Movies</b>)</li>
                               <li>Or your folder of choice at a removable storage if you have one.</li>
                             </ul>
 
@@ -69,14 +69,14 @@
                         <details>
                           <summary>Private and Public gates differences?</summary>
                           <div>
-                            <b>Private/ internal</b>:
+                            <b>Private or internal</b>:
                             <ul>
                               <li>can only use the web interface provided by the app.</li>
                               <li>requires login via app to access both private and public accounts.</li>
                               <li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li>
                               <li>can scrape both private or public accounts.</li>
                             </ul>
-                            <b>Public/ external</b>:
+                            <b>Public or external</b>:
                             <ul>
                               <li>can use Instagram app, or browsers.</li>
                               <li>doesn't require a login via this app to access public or private accounts.</li>
@@ -172,7 +172,7 @@
                         <details>
                           <summary>What is <i>Organize directories</i> for?</summary>
                           <div>
-                            To organize your pictures/ videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external
+                            To organize your photos or videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external
                             removable disk for greater storage rooms rather than being stored internally.
                           </div>
                         </details>
@@ -226,7 +226,7 @@
                         <details>
                           <summary>How to repost videos or pictures?</summary>
                           <div>
-                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> medu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram/ repost</b> button. Be
+                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> medu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram or repost</b> button. Be
                             sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
 
                           </div>
@@ -328,7 +328,7 @@
                             <br><b>FREE:</b>
                             <ol>
                               <li>Has reward or point system in return for app features.</li>
-                              <li>Browser will be killed if the app is put into background/ overview. If scraping, it will be terminated.</li>
+                              <li>Browser will be killed if the app is put into background or overview. If scraping, it will be terminated.</li>
                               <li>Scraper will start at 32 seconds threshold after watching video with the above-mentioned minimum points. If the video is closed before 32 seconds, no scraping spider will run.</li>
                               <li>No watermark option is not saved.</li>
                               <li>My watermark requires PRO.</li>
