--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -303,6 +303,13 @@
                           </div>
                         </details>
                         <details>
+                          <summary>I downloaded one, but broken?</summary>
+                          <div>
+                            Might happen at slow connection with large size. When broken, the app may fail to display it. Try deleting it via Delete button at gallery display. Or long press it at grid menu display to reveal the Delete button. Or re-download it beforehand if prompted.
+
+                          </div>
+                        </details>
+                        <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
                             Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad
