--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -165,7 +165,7 @@
                         <details>
                           <summary>Why scraping not work?</summary>
                           <div>
-                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 30 points is required before you close it. If you close it too early, scraping is not triggered.
+                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and 30 points is required before you close it. If you close it too early, scraping is not triggered.
 
                           </div>
                         </details>
@@ -312,14 +312,11 @@
                         <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
-                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad
-                            after a minimum 32 seconds
-                            threshold met, you will earn 10 points. If you close it before the threshold 32 seconds, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be
-                            executed.
+                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed.
                             <ul>
                               <li>1 download = 1 point at regular one-at-a-time download.</li>
-                              <li>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the 32 seconds threshold.</li>
-                              <li>Ads-free requires 3000 points. No ads (banner or fullscreen ones) will be shown.</li>
+                              <li>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the countdown threshold.</li>
+                              <li>Ads-free requires 6000 points. No ads (banner or fullscreen ones) will be shown.</li>
                             </ul>
 
                             Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted,
@@ -336,7 +333,7 @@
                             <ol>
                               <li>Has reward or point system in return for app features.</li>
                               <li>Browser will be killed if the app is put into background or overview. If scraping, it will be terminated.</li>
-                              <li>Scraper will start at 32 seconds threshold after watching video with the above-mentioned minimum points. If the video is closed before 32 seconds, no scraping spider will run.</li>
+                              <li>Scraper will start at the end of countdown after watching video with the above-mentioned minimum points. If the video is closed before the countdown ends, no scraping spider will run.</li>
                               <li>No watermark option is not saved.</li>
                               <li>My watermark requires PRO.</li>
                             </ol>
