--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -55,14 +55,14 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <img src="instagram.jpg" alt="How to download Instagram photos and videos easily" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram.jpg" alt="How to download Instagram photos and videos easily" />
 
                           </div>
                         </details>
                         <details>
                           <summary>Twitter</summary>
                           <div>
-                            <img src="twitter.jpg" alt="How to download Twitter photos and videos easily" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter.jpg" alt="How to download Twitter photos and videos easily" />
                           </div>
                         </details>
                         <details>
