--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -68,7 +68,7 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better.
+                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link</p>.
                           </div>
                         </details>
                       </div>
