--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -226,7 +226,7 @@
                         <details>
                           <summary>How to repost videos or pictures?</summary>
                           <div>
-                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> medu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram or repost</b> button. Be
+                            Tap any thumbnail to open the gallery display, or hit <b>Images</b> or <b>Videos</b> menu on the drawer. Find a button with a Repost sign (like seen at Twitter with Retweet), and tap that <b>Regram or repost</b> button. Be
                             sure to give credit to owners, and seek for their permissions. Or provide the configurable watermark as a credit in the least.
 
                           </div>
