--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -312,7 +312,7 @@
                         <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
-                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, you will still get the bonus point 2, but not the feature (scraping, free watermarks, etc.). Meaning scraping, etc. will not be executed.
+                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, the feature (scraping, free watermarks, etc.) will not be executed.
                             <ul>
                               <li>1 download = 1 point at regular one-at-a-time download.</li>
                               <li>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the countdown threshold.</li>
