--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/license" />
   <title>License | gaus</title>
   <style>
-  *,::before,::after{box-sizing:border-box}html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}html{height:100%;width:100%;font-size:100%;background:none;line-height:1.4}body{font-family:'Roboto',sans-serif;background:none;margin:0;padding:0;max-width:100%;word-wrap:break-word;position:relative}ul,ol{margin:0;padding:0 0 .25em 2em}img,video,audio,iframe{display:block;border:0}img,video,audio,iframe,pre,blockquote{width:100%;max-width:100%;height:auto;margin:1em auto}pre,code,p{word-wrap:break-word}pre{white-space:pre-wrap;font-size:82%}pre code,p + code{display:block;padding:1em;width:100%}pre code{background-color:transparent}blockquote{font-family:'Roboto Slab';padding:.5em 10px;font-size:110%}h1,h2,h3,h4,h5,h6{font-family:'Roboto Slab';font-weight:300}h1{font-size:140%}h2{font-size:135%}h3{font-size:120%}del{text-decoration:line-through}table{border:0;border-spacing:0;font-size:82%;margin:10px 0;max-width:100%;width:100%}tr{padding:.1em .6em}thead > tr{border-bottom:1px solid #eaeaea}tr:nth-of-type(even){background:rgba(0,0,0,0.105)}table tr th{background:rgba(0,0,0,0.51);color:#fff;border-bottom-style:none}table tbody tr th{vertical-align:top}tr td,tr th{padding:4px 9px;text-align:left}hr{border:0;border-top:1px solid #eaeaea;margin:1em auto}td p{display:inline}.media{display:block;height:0;overflow:hidden;width:100%;position:relative;padding-bottom:56.25%}.media iframe{display:block;height:100%;left:0;position:absolute;top:0;width:100%}pre{transition:all .2s}.codezoomed{background:#000;font-size:100%;z-index:99;transition:all .2s}.codezoomed code{font-size:100%}div.license{background:#ffffff;display:none;position:absolute;top:0;left:0;height:100%;height:100vh;width:100%;z-index:99}a{text-decoration:none}a.menuitem{display:block;color:inherit!important}.close{border:0;background:none;display:none;font-size:2em;padding:5px 10px;position:fixed;right:0;top:0;z-index:101;-webkit-backface-visibility:hidden;backface-visibility:hidden}.license__content{overflow-y:scroll;background-color:#ffffff;position:relative}div.license:target{display:block}div.license pre,div.license code{background-color:transparent}.is-boxed{overflow:hidden;min-height:210px}.is-boxed #menu{display:none}.is-boxed .close{display:block}
+  *,::before,::after{box-sizing:border-box}html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}html{height:100%;width:100%;font-size:100%;line-height:1.4}body{font-family:'Roboto',sans-serif;margin:0;padding:0;max-width:100%;word-wrap:break-word;position:relative}ul,ol{margin:0;padding:0 0 .25em 2em}img,video,audio,iframe{display:block;border:0}img,video,audio,iframe,pre,blockquote{width:100%;max-width:100%;height:auto;margin:1em auto}pre,code,p{word-wrap:break-word}pre{white-space:pre-wrap;font-size:82%}pre code,p + code{display:block;padding:1em;width:100%}blockquote{font-family:'Roboto Slab';padding:.5em 10px;font-size:110%}h1,h2,h3,h4,h5,h6{font-family:'Roboto Slab';font-weight:300}h1{font-size:140%}h2{font-size:135%}h3{font-size:120%}del{text-decoration:line-through}table{border:0;border-spacing:0;font-size:82%;margin:10px 0;max-width:100%;width:100%}tr{padding:.1em .6em}thead > tr{border-bottom:1px solid #eaeaea}tr:nth-of-type(even){background:rgba(0,0,0,0.105)}table tr th{background:rgba(0,0,0,0.51);color:#fff;border-bottom-style:none}table tbody tr th{vertical-align:top}tr td,tr th{padding:4px 9px;text-align:left}td p{display:inline}.media{display:block;height:0;overflow:hidden;width:100%;position:relative;padding-bottom:56.25%}.media iframe{display:block;height:100%;left:0;position:absolute;top:0;width:100%}pre{transition:all .2s}iv.license{display:none;position:absolute;top:0;left:0;height:100%;height:100vh;width:100%;z-index:99}a{text-decoration:none}a.menuitem{display:block;color:inherit!important}.close{border:0;background:none;display:none;font-size:2em;padding:5px 10px;position:fixed;right:0;top:0;z-index:101;-webkit-backface-visibility:hidden;backface-visibility:hidden}.license__content{overflow-y:scroll;position:relative}div.license:target{display:block}.is-boxed{overflow:hidden;min-height:210px}.is-boxed #menu{display:none}.is-boxed .close{display:block}
     details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
   </style>
 </head>
@@ -55,56 +55,67 @@
 
                         <div id="container">
 
-<a href="#container" class="close">&times;</a>
+                          <a href="#container" class="close">&times;</a>
 
-<div id="license-wrapper">
-<div id="menu">
-    <p><a class="plain menuitem" href="#apache"><b>VIP Downloader</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2018 Gaus Surahman</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>OkHttp</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p><hr>
-    <!-- <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
+                          <div id="license-wrapper">
+                            <div id="menu">
+                              <p><a class="plain menuitem" href="#apache"><b>VIP Downloader</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2018 Gaus Surahman</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>OkHttp</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
+                              <hr>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
         <small>The Apache License<br>
             <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p><hr> -->
-    <p><a class="plain menuitem" href="#mit"><b>JSOUP</b> &#10143;<br>
-        <small>MIT License<br>
-            <span class="licenseowner">Copyright (c) 2009, 2010, 2011, 2012, 2013 Jonathan Hedley < jonathan@hedley.net ></span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>Android-Image-Cropper</b> &#10143;<br>
-        <small>The Apache License<br>
-        <span class="licenseowner">Copyright 2016, Arthur Teplitzki, 2013, Edmodo, Inc.</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>PhotoView</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright 2017 Chris Banes</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>FloatingActionButton</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright 2015 Dmytro Tarianyk</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>SQLiteAssetHelper</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2011 readyState Software Ltd</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>AssetSQLiteOpenHelper</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2016 The Android Open Source Project<br>Modifications (c) 2017 CommonsWare, LLC</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p><hr>
-    <p><a class="plain menuitem" href="#apache"><b>Android libraries</b> &#10143;<br>
-        <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2006 (various years) The Android Open Source Project</span><br>
-            androidx, material, room, paging, lifecycle, livedata, viewmodel, vector_drawable, preference, firebase, etc.</small></a></p>
-</div>
+                              <p><a class="plain menuitem" href="#mit"><b>JSOUP</b> &#10143;<br>
+                                  <small>MIT License<br>
+                                    <span class="licenseowner">Copyright (c) 2009, 2010, 2011, 2012, 2013 Jonathan Hedley < jonathan@hedley.net></span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>Android-Image-Cropper</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright 2016, Arthur Teplitzki, 2013, Edmodo, Inc.</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>PhotoView</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright 2017 Chris Banes</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>FloatingActionButton</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright 2015 Dmytro Tarianyk</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>SQLiteAssetHelper</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2011 readyState Software Ltd</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>AssetSQLiteOpenHelper</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2016 The Android Open Source Project<br>Modifications (c) 2017 CommonsWare, LLC</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
+                              <hr>
+                              <p><a class="plain menuitem" href="#apache"><b>Android libraries</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2006 (various years) The Android Open Source Project</span><br>
+                                    androidx, material, room, paging, lifecycle, livedata, viewmodel, vector_drawable, preference, firebase, etc.</small></a></p>
+                            </div>
 
 
-<div id="apache" class="license">
+                            <div id="apache" class="license">
 
-<div class="license__content"><div class="license__scroll">
-<p><b>The Apache License</b></p>
+                              <div class="license__content">
+                                <div class="license__scroll">
+                                  <p><b>The Apache License</b></p>
 
-<pre>
+                                  <pre>
     <p class="licenseowner"> </p>
 Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
 
@@ -112,16 +123,18 @@ Licensed under the Apache License, Version 2.0 (the "License"); you may not use 
 
 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 </pre>
-</div></div>
+                                </div>
+                              </div>
 
-</div>
+                            </div>
 
-<div id="mit" class="license">
+                            <div id="mit" class="license">
 
-    <div class="license__content"><div class="license__scroll">
-        <p><b>The MIT License</b></p>
+                              <div class="license__content">
+                                <div class="license__scroll">
+                                  <p><b>The MIT License</b></p>
 
-        <pre>
+                                  <pre>
             <p class="licenseowner"> </p>
 Permission is hereby option, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -130,16 +143,18 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         </pre>
 
-    </div></div>
+                                </div>
+                              </div>
 
-</div>
+                            </div>
 
-<div id="bsd" class="license">
+                            <div id="bsd" class="license">
 
-    <div class="license__content"><div class="license__scroll">
-        <p><b>The BSD License</b></p>
+                              <div class="license__content">
+                                <div class="license__scroll">
+                                  <p><b>The BSD License</b></p>
 
-        <pre>
+                                  <pre>
             <p class="licenseowner"> </p>
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -150,11 +165,12 @@ Redistribution and use in source and binary forms, with or without modification,
 
 THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS AND CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         </pre>
-    </div></div>
+                                </div>
+                              </div>
 
-</div>
-</div>
-</div>
+                            </div>
+                          </div>
+                        </div>
 
                       </div>
                     </div>
