--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -55,7 +55,13 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram.jpg" alt="How to download Instagram photos and videos easily" />
+                            <ul>
+                              <li>Long press on any small thumbnails at listing pages: /tags, /explore, /profile, or search pages, etc.</li>
+                              <li>Or tap the BOOKMARK icon at larger listings, or full page views.</li>
+                              <li>Or tap the three vertical dots at the top right coder, and hit <b>Copy link</b>.</li>
+                            </ul>
+                            <p>The first two is if using the provided private/ internal web app. The last can be any public browsers, or Instagram app.</p>
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily" />
 
                           </div>
                         </details>
