--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -56,8 +56,8 @@
                           <summary>Instagram</summary>
                           <div>
                             <ul>
-                              <li>Long press on any small thumbnails at listing pages: /tags, /explore, /profile, or search pages, etc.</li>
-                              <li>Or tap the BOOKMARK icon at larger listings, or full page views.</li>
+                              <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
+                              <li>Or tap the <b>BOOKMARK</b> icon at listings with larger images, or full page views.</li>
                               <li>Or tap the three vertical dots at the top right coder, and hit <b>Copy link</b>.</li>
                             </ul>
                             <p>The first two is if using the provided private/ internal web app. The last can be any public browsers, or Instagram app.</p>
@@ -68,7 +68,11 @@
                         <details>
                           <summary>Twitter</summary>
                           <div>
-                            <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter.jpg" alt="How to download Twitter photos and videos easily" />
+                          <ul>
+                              <li>Long press on post creation/ time link (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
+                              <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings and hit <b>Copy lint to Tweet</b>.</li>
+                            </ul>
+
                           </div>
                         </details>
                         <details>
