--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -67,11 +67,17 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
+                              <hr> -->
+                              <p><a class="plain menuitem" href="#apache"><b>Glide</b> &#10143;<br>
+                                  <small>BSD, part MIT and Apache 2.0<br>
+                                    <span class="licenseowner">Copyright (c) 1994 Anthony Dekker</span></small></a></p>
                               <hr>
-                              <!-- <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
+                              <!-- 
+                              
+                              <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
         <small>The Apache License<br>
             <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p><hr> -->
                               <p><a class="plain menuitem" href="#mit"><b>JSOUP</b> &#10143;<br>
@@ -98,10 +104,15 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 The Android Open Source Project<br>Modifications (c) 2017 CommonsWare, LLC</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
+                              <hr> -->
+                              <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                    <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
                               <hr>
+                              
                               <p><a class="plain menuitem" href="#apache"><b>Android libraries</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2006 (various years) The Android Open Source Project</span><br>
