--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -55,12 +55,14 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <ul>
+                            <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
                               <li>Or tap the <b>BOOKMARK</b> icon at listings with larger images, or full page views.</li>
+                              <li>Or tap the <b>LIKE</b> icon at listings with larger images, or full page views.</li>
+                              <li>Or long press the post creation <b>TIME</b> at listings with larger images, or full page views.</li>
                               <li>Or tap the three vertical dots at the top right coder, and hit <b>Copy link</b>.</li>
-                            </ul>
-                            <p>The first two is if using the provided private/ internal web app. The last can be any public browsers, or Instagram app.</p>
+                            </ol>
+                            <p>The first four are applicable if using the provided private/ internal web app. The last can be any public browsers, or Instagram app.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily" />
 
                           </div>
@@ -68,10 +70,11 @@
                         <details>
                           <summary>Twitter</summary>
                           <div>
-                          <ul>
-                              <li>Long press on post creation/ time link (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
-                              <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings and hit <b>Copy lint to Tweet</b>.</li>
-                            </ul>
+                          <ol>
+                              <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
+                              <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy lint to Tweet</b>.</li>
+                          </ol>
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily" />
 
                           </div>
                         </details>
