--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -71,9 +71,11 @@
                           <summary>Twitter</summary>
                           <div>
                           <ol>
-                              <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
-                              <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy lint to Tweet</b>.</li>
+                              <li><b>Video</b>: Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
+                              <li><b>Video</b>: Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy lint to Tweet</b>.</li>
+                              <li><b>Image</b>: Long press on images internal to Twitter. Not those leading to external sites, identified by <b>https://t.co/...</b> url.</li>
                           </ol>
+                          <p>Be informed! Only works for a stand alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download.</p>
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily" />
 
                           </div>
