--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -126,11 +126,9 @@
                                 <div class="license__scroll">
                                   <p><b>The Apache License</b></p>
 
-                                  <div class="pre">
+                                  <div class="prex">
     <p class="licenseowner"> </p>
-Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
-
-   http://www.apache.org/licenses/LICENSE-2.0
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 </div>
@@ -145,7 +143,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
                                 <div class="license__scroll">
                                   <p><b>The MIT License</b></p>
 
-                                  <div class="pre">
+                                  <div class="prex">
             <p class="licenseowner"> </p>
 Permission is hereby option, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -165,7 +163,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                 <div class="license__scroll">
                                   <p><b>The BSD License</b></p>
 
-                                  <div class="pre">
+                                  <div class="prex">
             <p class="licenseowner"> </p>
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
