--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -71,11 +71,17 @@
                           <summary>Twitter</summary>
                           <div>
                           <ol>
-                              <li><b>Video</b>: Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
-                              <li><b>Video</b>: Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy lint to Tweet</b>.</li>
-                              <li><b>Image</b>: Long press on images internal to Twitter. Not those leading to external sites, identified by <b>https://t.co/...</b> url.</li>
+                              <li><b>Video</b>:
+                              <ul>
+                                <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
+                                <li>Or tap the <b>SHARE</b> icon at bottom right of card at listings, and hit <b>Copy link to Tweet</b>.</li>
+                              </ul>
+                              <li><b>Image</b>: 
+                              <ul>
+                                <li>Long press on images <b>internal to</b> or hosted in Twitter. Not those leading to external sites, identified by <b>https://t.co/...</b> url.</li>
+                              </ul>
                           </ol>
-                          <p>Be informed! Only works for a stand alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download.</p>
+                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet. Just visit its original tweet to download.</p>
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily" />
 
                           </div>
@@ -83,7 +89,7 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link</p>.
+                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link. If the images in this section are not visible, be sure to connect internet.</p>
                           </div>
                         </details>
                       </div>
