--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -106,15 +106,13 @@
                         <details>
                           <summary>How does Instagram scraping work?</summary>
                           <div>
-                            It is not real scraping. Scraping word is used to simplify the wordings. It is more like download-multiple-files-once than regular scraping. Needs manual intervention due to the pages are dynamically built and destroyed
-                            client-side. <br><b>Steps:</b> <br>
+                            It is not real scraping. Scraping word is used to simplify the wordings. It is more like download-multiple-files-once than regular scraping. Needs manual intervention due to the pages are dynamically built and destroyed client-side. 
+                            <br><b>Steps:</b> <br>
                             <ol>
-                              <li>Scroll to the bottom of the page to begin collecting links, and up again
-                                to verify links collected. Or keep hitting <b>Rescan</b> to auto-scroll till the bottom reached. </li>
+                              <li>Scroll to the bottom of the page to begin collecting links. Or keep hitting <b>Rescan</b> to auto-scroll till the bottom reached. </li>
                               <li>Hit the <b>Scrape</b> button, and wait for the spider to finish its job.</li>
                             </ol>
-                            Again this is not scraping. It is just a convenient way to download multiple files at one click. Use it wisely and responsibly for good purposes.
-
+                            Again this is not scraping. It is just a convenient way to download multiple files at one click. Use it wisely and responsibly.
                           </div>
                         </details>
                         <details>
@@ -122,12 +120,10 @@
                           <div>
                             <ul>
                               <li>Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, /explore, or practically any pages is doable, this feature is postponed till enough requests.</li>
-                              <li>Strong internet
-                                connection.</li>
-                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space,
-                                move or delete files.
+                              <li>Strong internet connection. Do not scrape at slow connection!</li>
+                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files.
                                 Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li>
-                              <li><b>FREE</b> version: as minimum of 30 points</li>
+                              <li><b>FREE</b> version: some minimum points</li>
                             </ul>
 
                           </div>
@@ -165,7 +161,7 @@
                         <details>
                           <summary>Why scraping not work?</summary>
                           <div>
-                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and 30 points is required before you close it. If you close it too early, scraping is not triggered.
+                            Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and some points are required before you close it. If you close it too early, scraping is not triggered.
 
                           </div>
                         </details>
@@ -311,7 +307,7 @@
                         <details>
                           <summary>I downloaded one, but broken?</summary>
                           <div>
-                            Might happen at slow connection with large size. When broken, the app may fail to display it. Try deleting it via Delete button at gallery display. Or long press it at grid menu display to reveal the Delete button. Or re-download it beforehand if prompted.
+                            Might happen at slow connection with large size. When broken, the app may fail to display it. Try deleting it via Delete button at gallery display. Or long press it at grid menu display to reveal the Delete button. Or re-download it beforehand if prompted. Be informed, for sensitive contents, the links are tokenized and can be expired in just seconds. Re-download using old links might break. Simply delete it, and re-download. Do not download during slow connection.
 
                           </div>
                         </details>
@@ -321,13 +317,12 @@
                             Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, the feature (scraping, free watermarks, etc.) will not be executed.
                             <ul>
                               <li>1 download = 1 point at regular one-at-a-time download.</li>
-                              <li>Scraping requires 30 points. Scraping can download 100 or 300 items at once if you have the minimum point and meet the countdown threshold.</li>
+                              <li>Scraping requires some minimum points. Scraping can download 100 or 300 items at once if you meet the countdown threshold and minimum points.</li>
                               <li>Ads-free requires 6000 points. No ads (banner or fullscreen ones) will be shown.</li>
                             </ul>
 
                             Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted,
-                            be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download 300 items per day, consider keeping your points above the minimum to get ads-free
-                            interruptions. <br><br>If you are sick of points, consider a PRO version.
+                            be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download many per day, consider keeping your points above the minimum to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
 
                           </div>
                         </details>
@@ -366,9 +361,9 @@
                         <details>
                           <summary>Know Bugs</summary>
                           <div>
-                            <br><br><b>Know Bugs</b>
+                            <b>Know Bugs</b>
                             <ul>
-                              <li>Camera not working in Android 10 (API 29)</li>
+                              <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.</li>
                             </ul>
                           </div>
                         </details>
