--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -89,7 +89,7 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link. If the images in this section are not visible, be sure to connect internet.</p>
+                            Basically long tap on any links leading to the full pages if at listing page identified by small thumbnails. Or find and hit <b>Copy link</b>. If the images in this tutorial section are not visible, be sure to connect internet.</p>
                           </div>
                         </details>
                       </div>
