--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -102,18 +102,7 @@
         </div>
       </div>
       <footer class="l-footer">
-        <div class="l-container">
-          <div class="l-footer__bottom">
-            <div class="region region-footer-fifth">
-              <div data-drupal-messages-fallback class="hidden"></div>
-              <div id="block-footercopyright--2" class="block--footercopyright--2 block block--block-content">
-                <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                  <p>© 2008 gaus.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <p>© 2008 gaus | <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram & Twitter</b></a></p>
       </footer>
     </div>
   </div>
